TM-11281 Change API command validation with error messages using i18n

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -241,3 +241,6 @@ metric.validation.query.null=The field query can not be null when metric is in q
 
 
 of.same.project.constraint.message = Invalid Provider specified
+
+# Dataview API errors
+dataviewApiParamsCommand.filter.error.message=Property {0} with invalid value {3}
