--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,6 +19,7 @@ default.null.message=Property {0} of {1} cannot be null
 default.not.unique.message=Property {0} of {1} with value [{2}] must be unique
 default.invalid.json.message=Property {0} contains invalid JSON
 default.param.reference.in.url.not.found=URL placeholder parameter(s) "{3}" must be specified in Action parameters
+default.empty.ids.list.message = Please select one or more records before invoking action
 
 default.paginate.prev=Previous
 default.paginate.next=Next
