--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -200,6 +200,8 @@ field.invalid.notEmpty = Value \"{0}\" for property \"{1}\" is required
 field.invalid.notInList = Value \"{0}\" for property \"{1}\" is invalid, options are: {2}
 field.invalid.notInListOrBlank = Value \"{0}\" for property \"{1}\" is invalid, options are: {2}, or BLANK
 field.invalid.sizeOutOfBounds = Value \"{0}\" size for property \"{1}\" is out of bounds min size: {2}, max size {3}
+field.incorrect.dateFormat = Value \"{0}\" for property \"{1}\" has an incorrect date format: \"{2}\"
+field.invalid.dateFormat = Value \"{0}\" for property \"{1}\" has an invalid date format: \"{2}\". Exception thrown: \"{3}\
 
 NO_APP_CUSTOM_FIELDS = No Application Custom Fields Defined
 
