--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -200,11 +200,9 @@ field.invalid.notEmpty = Value \"{0}\" for property \"{1}\" is required
 field.invalid.notInList = Value \"{0}\" for property \"{1}\" is invalid, options are: {2}
 field.invalid.notInListOrBlank = Value \"{0}\" for property \"{1}\" is invalid, options are: {2}, or BLANK
 field.invalid.sizeOutOfBounds = Value \"{0}\" size for property \"{1}\" is out of bounds min size: {2}, max size {3}
-field.invalid.NaN = Value \"{0}\" for property \"{1}\" should be a number
-field.invalid.valueOutOfRange = Value \"{0}\" for property \"{1}\" should be between values \"{2}\" and \"{3}\"
-field.invalid.decimalPlacesExceeded = Value \"{0}\" for property \"{1}\" should have \"{2}\" decimal places at most
-field.invalid.negativesNotAllowed = Value \"{0}\" for property \"{1}\" does not allow negative numbers
-field.invalid.thousandSeparatorRequired = Value \"{0}\" for property \"{1}\" should have a thousand separator
+field.invalid.precisionExceeded = Value \"{0}\" for property \"{1}\" should have \"{2}\" decimal places at most
+field.invalid.negativeNotAllowed = Value \"{0}\" for property \"{1}\" does not allow negative numbers
+
 
 NO_APP_CUSTOM_FIELDS = No Application Custom Fields Defined
 
