TM-12296: (changes made to implement code review comments)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -155,8 +155,10 @@ workflow.flag.skipped = Skipped
 workflowTransition.code.unique = Field with value [{2}] must be unique
 
 #validations to MoveBundle
-MoveBundle.name.blank = Name cannot be blank
-MoveBundle.workflowCode.blank = Please select WorkflowCode
+moveBundle.name.blank = Name cannot be blank
+moveBundle.workflowCode.blank = Please select WorkflowCode
+moveBundleCommand.name.blank = Name cannot be blank
+moveBundleCommand.workflowCode.blank = Please select WorkflowCode
 
 #
 model.modelName.blank = Model Name cannot be blank
