--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -250,3 +250,6 @@ of.same.project.constraint.message = Invalid Provider specified
 
 # Dataview API errors
 dataviewApiParamsCommand.filter.error.message=Property {0} with invalid value {3}
+
+# AssetDependency custom validation error messages
+assetDependency.dependent.invalid.dependent = An asset dependency reference to itself is prohibited
