TM-14234: TMR - Implement endpoint to support remote invocation of actions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -225,6 +225,15 @@ apiAction.task.message.lapsed=The action did not complete in the estimate time a
 apiAction.task.message.stalled=The action progress appears to have stalled and may need to be investigated.
 apiAction.task.message.timedout=The network call to the action timed out and the results are indeterminate therefore should be investigated.
 apiAction.task.message.bypassed=Action has been by-passed.
+apiAction.task.message.noAction=Task does not have an assigned action to invoke
+apiAction.task.message.alreadyInvoked=The action has already been invoked
+apiAction.task.message.notActionable=Task status must be Ready or Started in order to invoke action
+apiAction.task.message.syncActionNotSupported=The action is defined as synchronous which is not supported
+apiAction.task.message.notLocalAction=The action is not defined to be invoked locally
+apiAction.task.message.notRemoteAction=The action is not defined to be invoked remotely
+apiAction.task.message.noPermission=You do not have permission to invoke the action
+apiAction.task.message.invalidReactionScript=The action contains an invalid Reaction script that is preventing the action from being invoked
+
 
 fileSystem.invalid.fileExtension = Invalid File extension.
 fileSystem.files.cannotdelete = The following file(s) could not be deleted: {0}.
